force-app/main/default/objects/Pricing_Request_Line__c/Pricing_Request_Line__c.object-meta.xml
<CustomObject>
    <label>BT Pricing Request Line</label>
    <nameField>
        <displayFormat>PRL-{0000}</displayFormat>
        <label>Pricing Request Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Pricing Request Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>