force-app/main/default/objects/Pricing_Request_Line__c/fields/Pricing_Request__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Request__c</fullName>
    <label>Pricing Request</label>
    <referenceTo>Pricing_Request__c</referenceTo>
    <relationshipName>Pricing_Request_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>