force-app/main/default/objects/Pricing_Request_Line__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipName>Pricing_Request_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>